--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,12 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: 5
-  username: root
-  password: BtjyqElnssfAkWYsYIKKdvesIlVpUcyJ
   socket: /var/run/mysqld/mysqld.sock
+  url: <%= ENV['DATABASE_URL'] %>
 
 development:
   <<: *default
-  url: mysql://root:BtjyqElnssfAkWYsYIKKdvesIlVpUcyJ@autorack.proxy.rlwy.net:35532/railway
+  url: <%= ENV['DATABASE_URL'] %>
   # database: mysql_development
 
 # Warning: The database defined as "test" will be erased and
@@ -52,18 +51,19 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    url: mysql://root:BtjyqElnssfAkWYsYIKKdvesIlVpUcyJ@autorack.proxy.rlwy.net:35532/railway
-    username: root
-    password: BtjyqElnssfAkWYsYIKKdvesIlVpUcyJ
+    url: <%= ENV['DATABASE_URL'] %>
   cache:
     <<: *primary_production
     database: mysql_production_cache
     migrations_paths: db/cache_migrate
+    url: <%= URI.parse(ENV["DATABASE_URL"]).tap { |url| url.path += "_cache" } if ENV["DATABASE_URL"] %>
   queue:
     <<: *primary_production
     database: mysql_production_queue
     migrations_paths: db/queue_migrate
+    url: <%= URI.parse(ENV["DATABASE_URL"]).tap { |url| url.path += "_queue" } if ENV["DATABASE_URL"] %>
   cable:
     <<: *primary_production
     database: mysql_production_cable
     migrations_paths: db/cable_migrate
+    url: <%= URI.parse(ENV["DATABASE_URL"]).tap { |url| url.path += "_cable" } if ENV["DATABASE_URL"] %>
